class CalzadoAdmin:
    pass