class CalzadoColor:
    def __init__(self) -> None:
        self.primario: str
        self.secundario: str | None
