class CalzadoTalle:
    def __init__(self) -> None:
        self.descripcion: str
        self.medida_en_cm : float
