class CalzadoTipo:
    def __init__(self) -> None:
        self.descripcion : str
